feat(eza): ✨ cleanup eza config a bit

--- a/install.yml
+++ b/install.yml
@@ -47,6 +47,9 @@
       source: conf/bottom/bottom.jsonnet
     "~/.config/eza/":
       source: conf/eza/eza.jsonnet
+      include:
+      - conf/eza
+      - "."
 
 # ╭──────────────────────╮
 # │ Install aria2 config │
