--- a/install.yml
+++ b/install.yml
@@ -47,7 +47,7 @@
       source: conf/bottom/bottom.jsonnet
     "~/.config/eza/":
       source: conf/eza/eza.jsonnet
-      include:
+      include_dirs:
       - conf/eza
       - "."
 
