feat(cava): ✨ update cava config

--- a/conf/cava/config
+++ b/conf/cava/config
@@ -8,7 +8,7 @@
 ; mode = normal
 
 # Accepts only non-negative values.
-; framerate = 60
+framerate = 120
 
 # 'autosens' will attempt to decrease sensitivity if the bars peak. 1 = on, 0 = off
 # new as of 0.6.0 autosens of low values (dynamic range)
@@ -143,6 +143,7 @@ source = "BlackHole 2ch"
 # 'sdl_glsl' uses SDL to create an OpenGL context. Write your own shaders or
 # use one of the predefined ones.
 ; method = noncurses
+method = sdl
 
 # Orientation of the visualization. Can be 'bottom', 'top', 'left', 'right' or
 # 'horizontal'. Default is 'bottom'. 'left and 'right' are only supported on sdl
@@ -224,8 +225,8 @@ source = "BlackHole 2ch"
 ; foreground = default
 
 # SDL and sdl_glsl only support hex code colors, these are the default:
-; background = '#111111'
-; foreground = '#33ffff'
+background = '#111111'
+foreground = '#33ffff'
 
 
 # Gradient mode, only hex defined colors are supported,
