--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,6 +20,15 @@ tasks:
         -d "$(pwd)" \
         -c "$(pwd)/install.yml" \
         --verbose
+  install:only:
+    label: "󰚩 Install"
+    desc: "Install dotfiles using Dotbot"
+    cmds: 
+    - >
+      dotbot \
+        -d "$(pwd)" \
+        -c "$(pwd)/install.yml" \
+        --only {{.CLI_ARGS}}
   install:
     label: "󰚩 Install"
     desc: "Install dotfiles using Dotbot using dry-run mode."
