feat(weechat): ✨ update weechat config a bit

--- a/conf/weechat/irc.conf
+++ b/conf/weechat/irc.conf
@@ -219,7 +219,7 @@ undernet.usermode
 undernet.command_delay
 undernet.command
 undernet.autojoin_delay
-undernet.autojoin
+undernet.autojoin = "#femhumiliationsex"
 undernet.autojoin_dynamic
 undernet.autorejoin
 undernet.autorejoin_delay
@@ -235,3 +235,49 @@ undernet.split_msg_max_length
 undernet.charset_message
 undernet.default_chantypes
 undernet.registered_mode
+xxxchatters.addresses = "irc.xxxchatters.com/6667"
+xxxchatters.proxy
+xxxchatters.ipv6
+xxxchatters.tls = off
+xxxchatters.tls_cert
+xxxchatters.tls_password
+xxxchatters.tls_priorities
+xxxchatters.tls_dhkey_size
+xxxchatters.tls_fingerprint
+xxxchatters.tls_verify
+xxxchatters.password
+xxxchatters.capabilities
+xxxchatters.sasl_mechanism
+xxxchatters.sasl_username
+xxxchatters.sasl_password
+xxxchatters.sasl_key
+xxxchatters.sasl_timeout
+xxxchatters.sasl_fail
+xxxchatters.autoconnect = on
+xxxchatters.autoreconnect
+xxxchatters.autoreconnect_delay
+xxxchatters.nicks
+xxxchatters.nicks_alternate
+xxxchatters.username
+xxxchatters.realname
+xxxchatters.local_hostname
+xxxchatters.usermode
+xxxchatters.command_delay
+xxxchatters.command
+xxxchatters.autojoin_delay
+xxxchatters.autojoin = "#chat,#humiliation"
+xxxchatters.autojoin_dynamic
+xxxchatters.autorejoin
+xxxchatters.autorejoin_delay
+xxxchatters.connection_timeout
+xxxchatters.anti_flood
+xxxchatters.away_check
+xxxchatters.away_check_max_nicks
+xxxchatters.msg_kick
+xxxchatters.msg_part
+xxxchatters.msg_quit
+xxxchatters.notify
+xxxchatters.split_msg_max_length
+xxxchatters.charset_message
+xxxchatters.default_chantypes
+xxxchatters.registered_mode
