--- a/conf/weechat/irc.conf
+++ b/conf/weechat/irc.conf
@@ -281,3 +281,95 @@ xxxchatters.split_msg_max_length
 xxxchatters.charset_message
 xxxchatters.default_chantypes
 xxxchatters.registered_mode
+bondage.addresses = "irc.bondage.international/6667"
+bondage.proxy
+bondage.ipv6
+bondage.tls = off
+bondage.tls_cert
+bondage.tls_password
+bondage.tls_priorities
+bondage.tls_dhkey_size
+bondage.tls_fingerprint
+bondage.tls_verify
+bondage.password
+bondage.capabilities
+bondage.sasl_mechanism
+bondage.sasl_username
+bondage.sasl_password
+bondage.sasl_key
+bondage.sasl_timeout
+bondage.sasl_fail
+bondage.autoconnect = on
+bondage.autoreconnect
+bondage.autoreconnect_delay
+bondage.nicks
+bondage.nicks_alternate
+bondage.username
+bondage.realname
+bondage.local_hostname
+bondage.usermode
+bondage.command_delay
+bondage.command
+bondage.autojoin_delay
+bondage.autojoin = "#Bondage,#Chatters#Mistresses,#DaddyDoms`babygirls"
+bondage.autojoin_dynamic
+bondage.autorejoin
+bondage.autorejoin_delay
+bondage.connection_timeout
+bondage.anti_flood
+bondage.away_check
+bondage.away_check_max_nicks
+bondage.msg_kick
+bondage.msg_part
+bondage.msg_quit
+bondage.notify
+bondage.split_msg_max_length
+bondage.charset_message
+bondage.default_chantypes
+bondage.registered_mode
+cufflink.addresses = "irc.cuff-link.me/6697"
+cufflink.proxy
+cufflink.ipv6
+cufflink.tls = on
+cufflink.tls_cert
+cufflink.tls_password
+cufflink.tls_priorities
+cufflink.tls_dhkey_size
+cufflink.tls_fingerprint
+cufflink.tls_verify
+cufflink.password
+cufflink.capabilities
+cufflink.sasl_mechanism
+cufflink.sasl_username
+cufflink.sasl_password
+cufflink.sasl_key
+cufflink.sasl_timeout
+cufflink.sasl_fail
+cufflink.autoconnect = on
+cufflink.autoreconnect
+cufflink.autoreconnect_delay
+cufflink.nicks
+cufflink.nicks_alternate
+cufflink.username
+cufflink.realname
+cufflink.local_hostname
+cufflink.usermode
+cufflink.command_delay
+cufflink.command
+cufflink.autojoin_delay
+cufflink.autojoin = "#cuff-link,#humiliation,#kinky-geeks,#slutscravinghumiliation"
+cufflink.autojoin_dynamic
+cufflink.autorejoin
+cufflink.autorejoin_delay
+cufflink.connection_timeout
+cufflink.anti_flood
+cufflink.away_check
+cufflink.away_check_max_nicks
+cufflink.msg_kick
+cufflink.msg_part
+cufflink.msg_quit
+cufflink.notify
+cufflink.split_msg_max_length
+cufflink.charset_message
+cufflink.default_chantypes
+cufflink.registered_mode
