--- a/install.yml
+++ b/install.yml
@@ -193,6 +193,7 @@
   - github/gh-skyline
   - HaywardMorihara/gh-tidy
   - korosuke613/gh-user-stars 
+  - yahsan2/gh-sub-issue
 
 # ╭──────────────────╮
 # │ Watchman Watches │
