--- a/install.yml
+++ b/install.yml
@@ -234,7 +234,7 @@
       description: "@s0cks/weechat-scripts from GitHub"
       recursive: true
 - shell: # install the scripts using the supplied dotbot manifest (install.yml)
-  - dotbot -d /usr/local/share/weechat-scripts/ -c install.yml
+  - command: dotbot -d "/usr/local/share/weechat-scripts/" -c /usr/local/share/weechat-scripts/install.yml
 
 #TODO(@s0cks): properly install zellij configuration
 
