feat: ✨ install some stuff using eget

--- a/install.yml
+++ b/install.yml
@@ -181,6 +181,14 @@
       exclude:
       - .gitignore
 
+# ╭────────────────╮
+# │ eget Downloads │
+# ╰────────────────╯
+- eget:
+    to: "/usr/local/bin"
+    items:
+    - dnaka91/otti
+
 # ╭───────────────────────╮
 # │ GitHub CLI Extensions │
 # ╰───────────────────────╯
