--- a/dotconf/Taskfile.yml
+++ b/dotconf/Taskfile.yml
@@ -15,6 +15,7 @@ tasks:
     - .zaliases
     - .zshenv
     - .zimrc
+    - .zstyle
   clean:
     desc: "Clean the generated files"
     cmds:
@@ -23,7 +24,8 @@ tasks:
         .zprofile \
         .zaliases \
         .zshenv \
-        .zimrc
+        .zimrc \
+        .zstyle
   default:
     cmds:
     - task: generate
