--- a/dotconf/Taskfile.yml
+++ b/dotconf/Taskfile.yml
@@ -15,7 +15,7 @@ tasks:
     - .zaliases
     - .zshenv
     - .zimrc
-    - .zstyle
+    - .zstyles
   clean:
     desc: "Clean the generated files"
     cmds:
@@ -25,7 +25,7 @@ tasks:
         .zaliases \
         .zshenv \
         .zimrc \
-        .zstyle
+        .zstyles
   default:
     cmds:
     - task: generate
