--- a/install.yml
+++ b/install.yml
@@ -62,6 +62,8 @@
         source: conf/cava/config.jsonnet
       "~/.config/bat/":
         source: conf/bat/bat.jsonnet
+      "~/.config/gh/":
+        source: conf/gh/gh.jsonnet
       "~/Library/Application\\ Support/pik/":
         include_dirs:
         - conf/pik/
@@ -153,6 +155,7 @@
       - conf/pik
       - conf/aria2tui
       - conf/bat
+      - conf/gh
     # install various dotfiles
     ~/:
       glob: true
