--- a/tasks/jsonnet.yml
+++ b/tasks/jsonnet.yml
@@ -4,4 +4,8 @@ tasks:
     label: "Build {{.JSONNET_SOURCE}}"
     desc: "Build {{.JSONNET_SOURCE}} using Jsonnet"
     cmds:
-    - jsonnet {{.JSONNET_INCLUDE_DIRS | default "-J ." }} -S -m {{.JSONNET_BUILD_DIR | default "." }} {{.JSONNET_SOURCE}} {{.JSONNET_EXTRAS | default "" }} >/dev/null
+    - > 
+      jsonnet {{.JSONNET_INCLUDE_DIRS | default "-J ." }} \
+              -S \
+              -m {{.JSONNET_BUILD_DIR | default "." }} \
+              {{.JSONNET_SOURCE}} {{ if .JSONNET_EXTRAS }}{{ .JSONNET_EXTRAS }}{{ end }} {{ if .CLI_ARGS }}{{ .CLI_ARGS }}{{ end }}
