build(bat): 📦 add Taskfile.yml

--- a/conf/mise/Taskfile.yml
+++ b/conf/mise/Taskfile.yml
@@ -4,6 +4,9 @@ includes:
   jsonnet:
     internal: true
     taskfile: ../../tasks/jsonnet.yml
+  clean:
+    internal: true
+    taskfile: ../../tasks/clean.yml
 tasks:
   build:
     label: "Build mise config using Jsonnet"
@@ -13,10 +16,6 @@ tasks:
         JSONNET_SOURCE: "mise.jsonnet"
         JSONNET_INCLUDE_DIRS: "-J ../.. -J ."
         JSONNET_EXTRAS: --ext-str XDG_CONFIG_HOME
-  clean:target:
-    internal: true
-    cmds:
-    - rm -rfv {{.TARGETS}}
   clean:default-python-packages:
     cmds:
     - task: clean:target
