refactor: 🔨 code cleanup

--- a/dotconf/Taskfile.yml
+++ b/dotconf/Taskfile.yml
@@ -32,8 +32,11 @@ tasks:
         .zimrc \
         .zstyles \
         .zshrc \
+        .zshrc-light \
+        .zshrc-dark \
         .zkeys \
-        .hushlogin
+        .hushlogin \
+        hushlogin
   default:
     cmds:
     - task: generate
