--- a/install.yml
+++ b/install.yml
@@ -27,6 +27,9 @@
 # ╰─────────────────────────────────╯
 - mise: {}
 
+- shell:
+  - ./scripts/install-zim.sh
+
 # ╭──────────────────────────╮
 # │ Generate various configs │
 # ╰──────────────────────────╯
